--- a/assets/css/master.styl
+++ b/assets/css/master.styl
@@ -6,7 +6,7 @@ base()
 *, *:before, *:after
   box-sizing: border-box
   
-html
+html, body
   height: 100%
 
 body
@@ -29,7 +29,7 @@ img
 .langs
   background: #EAEAEA
   border-bottom: 1px solid white
-  padding: 0.25em
+  padding: 0.25em 1em
   text-align: right
   a
     margin-right: 0.5em
@@ -63,7 +63,7 @@ img
   display: block
       
 .logo
-  padding: 0.25em 1em
+  padding: 0.25em 2em
   display: inline-block
   vertical-align: middle
   
@@ -93,6 +93,8 @@ img
 
 .hero-image
   display: block
+  width: 100%
+  margin: 0 auto
   
 .hero-text
   position: absolute
@@ -117,7 +119,7 @@ img
     text-decoration: none
     color: #777
     display: block
-    padding: 1em
+    padding: 1em 2em
     margin: 0
     border-bottom: 4px solid #EAEAEA
     border-top: 2px solid #FFFFFF
@@ -126,9 +128,9 @@ img
     &.even
       background: #FCFBF9
     &.article-item
-      padding: 2em 1em
+      padding: 2em 2em
   h2
-    padding: 1em
+    padding: 1em 2em
     margin: 0
     color: white
     font-size: 1em
@@ -171,7 +173,7 @@ img
     margin-top: -4px
     
 .show-page-category
-  padding: 0.5em 1em
+  padding: 0.5em 2em
   color: white
   &.baby
     background: #6ABE28
@@ -179,6 +181,71 @@ img
     background: #00AFCA
   &.mama-to-mama
     background: #D91F2A
+    
+.show-page-heading
+.show-page-intro
+  margin-bottom: 0
+.show-page-intro
+.show-page-date
+  margin-top: 0
+
+.show-page-heading
+  font-size: 1.5em
+.show-page-intro
+  font-size: 1.8em
+  font-weight: 400
+  margin-bottom: 0.2em
+.show-page-date
+  font-size: 1em
+  font-weight: 400
+  
+.show-page-info
+.show-page-content
+  padding: 0.5em 2em
+.show-page-content
+  color: #777
+  font-size: 1.1em
+  border-bottom: 4px solid #EAEAEA
+  p
+    margin: 1.5em 0
+    
+.show-category-title
+  font-size: 1em
+  padding: 1em 2em
+  margin: 0
+  color: white
+  &.baby
+    background: #6ABE28
+  &.pregnancy
+    background: #00AFCA
+  &.mama-to-mama
+    background: #D91F2A
+    
+.show-category-articles
+  a
+    display: block
+    color: #777
+    text-decoration: none
+    padding: 1em 2em
+    border-bottom: 4px solid #EAEAEA
+    border-top: 2px solid #FFFFFF
+    h2
+      margin-bottom: 0
+      font-weight: 500
+      font-size: 1.25em
+    h3
+      margin-top: 0.25em
+      margin-bottom: 0.25em
+      font-weight: 400
+      font-size: 1em
+    h4
+      margin-top: 0.1em
+      font-weight: 400
+      font-size: 0.9em
+    &.odd
+      background: #F5F4F2
+    &.even
+      background: #FCFBF9
 
 .footer
   background: #F7A11A
