--- a/views/partials/_header.jade
+++ b/views/partials/_header.jade
@@ -1,12 +1,18 @@
 .page-row: .header
-  .navbar#menu
-    a(href='/').logo: img(src='/img/logo-mama.png')
-    a(href='#menu').menu-btn.open: img(src='/img/menu-btn.png')
-    a(href='#').menu-btn.close: img(src='/img/menu-btn-open.png')
-    .menu-list
-      a(href='/') Home
-      for category in records.navbar_features
-        a(href="#{category_path}/#{slugify(category.title)}.html")= category.title
+  .nav-outer
+    .wrapper
+      .navbar#menu
+        a(href='/').logo: img(src='/img/logo-mama.png')
+        a(href='#menu').menu-btn.open: img(src='/img/menu-btn.png')
+        a(href='#').menu-btn.close: img(src='/img/menu-btn-open.png')
+        .menu-list
+          a(href='/')
+            span.home-text Home
+            img(src='/img/home-icon.png').home-icon
+          for category, i in navbar_features
+            a(href="#{category_path}/#{slugify(category.title)}.html"
+              class="#{i + 1 === navbar_features.length ? 'last' : ''}")= category.title
   .langs
-    for locale in records.locales 
-      a(href="#{locale.href}" class="#{locale.locale === current_locale ? 'active' : ''}")= locale.name
+    .wrapper
+      for locale in locales
+        a(href="/lang/#{slugify(locale.isocode)}" class="#{locale.locale === current_locale ? 'active' : ''}")= locale.language
