--- a/views/index.jade
+++ b/views/index.jade
@@ -1,39 +1,50 @@
-extends layout
+extends index.layout
 
 block content
-  //- include partials/_bootstrap
 
-  .hero
+  .hero: .wrapper
     img(src='/img/mama-hero-img.jpg').hero-image
     h1.hero-text.
       <div class='line-1'>advice</div>
       <div class='line-2'>from</div>
       <div class='line-3'>experts &amp; parents</div>
 
-  .article-section.recommended
-  
-    h2 Recommended
+  .wrapper
 
-    for page, i in records.recommended_pages
-      a(href="#{articles_path}/#{page.slug}.html" class="#{i % 2 ? 'even' : 'odd'}").article-item
-        div(class="#{page.primary_category.slug}").page-category= page.primary_category.title
-        h3.
-          #{page.title}:
-          <span>#{page.description}</span>
+    .article-section.recommended
+    
+      h2 Recommended
 
-  for category, i in records.categories
-
-    .article-section(class="#{category.slug}")
-
-      h2= category.title
-
-      for page, i in category.featured_pages
-
+      for page, i in records.recommended_pages
         a(href="#{articles_path}/#{page.slug}.html" class="#{i % 2 ? 'even' : 'odd'}").article-item
+          div(class="#{page.primary_category.slug}").page-category= page.primary_category.title
           h3.
             #{page.title}:
             <span>#{page.description}</span>
 
-      a(href="#{category_path}/#{slugify(category.title)}.html").readmore.
-        More #{category.title}
-        <img src="/img/#{category.slug}-readmore.png" />
+    .category-articles
+
+      for category, i in records.categories
+
+        .article-section(class="#{category.slug}")
+
+          .category-icon
+            img(src="/img/#{category.slug}-icon-white.png")
+
+          h2= category.title
+
+          for page, i in category.featured_pages
+
+            a(href="#{articles_path}/#{page.slug}.html" class="#{i % 2 ? 'even' : 'odd'}").article-item
+              .inner-article(class="#{i + 1 === category.featured_pages.length ? 'last' : ''}")
+                h3.
+                  #{page.title}:
+                  <span>#{page.description}</span>
+
+                .article-content !{page.content.split('</p><p>').shift() + '...</p>'}
+
+                .readmore-article Read More
+
+          a(href="#{category_path}/#{slugify(category.title)}.html").readmore.
+            More #{category.title}
+            <img src="/img/#{category.slug}-readmore.png" />
