--- a/views/index.layout.jade
+++ b/views/index.layout.jade
@@ -11,7 +11,7 @@ html(xmlns='http://www.w3.org/1999/xhtml' lang=current_locale_isocode)
     title= _path
     != css('/')
 
-  body
+  body.home-page
 
     include partials/_header
 
