--- a/views/_category.jade
+++ b/views/_category.jade
@@ -2,12 +2,13 @@ extends layout
 
 block content
 
-  h1(class="#{item.slug}").show-category-title= item.title
+  div(class="#{item.slug}").show-page-category: .wrapper
+    h1.show-category-title= item.title
 
   if item.pages
-    .show-category-articles
+    .show-category-articles: .wrapper
       for page, i in item.pages
-        a(href="#{articles_path}/#{page.slug}" class="#{i % 2 === 0 ? 'even' : 'odd'}").show-category-article
+        a(href="../#{articles_path}/#{page.slug}.html" class="#{i % 2 === 0 ? 'even' : 'odd'}").show-category-article
           h2= page.title
           h3= page.description
           h4: em= moment(new Date(page.created_at)).format('Do MMMM YYYY')
