fixed incorrect html source order

--- a/views/index.layout.jade
+++ b/views/index.layout.jade
@@ -1,11 +1,7 @@
 include partials/_doctype
-  
-  include partials/_meta
-
+html(xmlns='http://www.w3.org/1999/xhtml')
+  head: include partials/_meta
   body.home-page
-
     include partials/_header
-
     include partials/_main
-
     include partials/_footer
