--- a/assets/css/master.styl
+++ b/assets/css/master.styl
@@ -125,20 +125,17 @@ img
     top: 0
     bottom: 0
     right: 0
-    left: 70%
-    width: 30%
     background: #F7A11A
-    padding: 0.25em 1.5em
+    padding: 0.25em 0.5em
     height: 100%
     display: inline-block
     vertical-align: middle
-    text-align: center
     img
       position: relative
-      top: 30%
-      left: 10%
-      display: inline-block
-      vertical-align: middle
+      top: 0
+      width: 75%
+      left: 15%
+      margin-top: 20%
     &.close
       display: none
     #menu:target &.close
